--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "randomstring": "^1.3.0",
-    "razorpay": "^2.9.3"
+    "razorpay": "^2.9.3",
+    "stripe": "^16.2.0"
   }
 }
